# team-roles-geekbot-sweep

./: .env  .gitignore  .pre-commit-config.yaml  .sops.yaml  LICENSE  README.md  dev-requirements.txt  pyproject.toml  requirements.txt  setup.py  team-roles.json
.github/: dependabot.yaml
.github/workflows/: create-standup-meeting-facilitator.yaml  create-standup-support-steward.yaml  meeting-facilitator.yaml  populate-current-roles.yaml  support-steward.yaml  support-triager.yaml  tests.yaml
examples/: README.md  quickstart.py
secrets/: calendar_id.json  gcp_service_account.json  geekbot_api_token.json  slack_bot_token.json
src/: app.py  create_geekbot_standup.py  get_slack_team_members.py  list_entrypoints.py  set_current_roles.py  set_team_roles.py  update_team_roles.py
src/calendar/: create_events_bulk.py  create_events_rolling_update.py  delete_events_bulk.py  event_handling.py  gcal_api_auth.py
src/encryption/: sops.py
src/geekbot/: create_geekbot_standup.py  get_slack_team_members.py  get_slack_usergroup_members.py  set_current_roles.py  update_team_roles.py
tests/test_calendar/: test_create_events_bulk.py  test_event_handling.py
