[tool.poetry]
name = "src"
version = "0.1.0"
description = "A tool to automatically assign 2i2c team members to various Team Roles"
license = "MIT"
authors = []

[tool.poetry.dependencies]
python = "^3.9"
slack-sdk = "^3.23"
requests = "^2.31"
rich = "^13.6"
loguru = "^0.7.2"
python-dateutil = "^2.8"
google-api-python-client = "^2.106"
google-auth-httplib2 = "^0.1"
google-auth-oauthlib = "^1.1"

[tool.poetry.scripts]
list-entrypoints = "src.list_entrypoints:main"
list-members = "src.geekbot.get_slack_usergroup_members:main"
update-team-role = "src.geekbot.update_team_roles:main"
create-standup = "src.geekbot.create_geekbot_standup:main"
populate-current-roles = "src.geekbot.set_current_roles:main"
create-next-event = "src.calendar.create_events_rolling_update:main"
create-bulk-events = "src.calendar.create_events_bulk:main"
delete-bulk-events = "src.calendar.delete_events_bulk:main"

[tool.poetry.dev-dependencies]
pre-commit = "^3.4.0"
pytest = "^7.4.3"
coverage = "^7.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
